<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".UI.TaskDescriptionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/register_bk_color"
            android:orientation="horizontal"
            android:verticalScrollbarPosition="defaultPosition">

            <TextView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_weight="6"
                android:text="Add Description"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/backButtonFromAddDesc"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/servenep" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TwoLineListItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="@color/black"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="40dp"
                            android:text="Title:"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/ettitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="25dp"
                            android:background="@drawable/custom_inputfield"
                            android:drawableEnd="@drawable/title"
                            android:hint="Eg; Cleaning backyard"
                            android:padding="8dp"
                            android:textSize="20sp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="25dp"
                            android:text="Task Description:"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/ettaskdes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="25dp"
                            android:background="@drawable/custom_inputfield"
                            android:gravity="top"
                            android:hint="Provide summary of the task."
                            android:inputType="textMultiLine"
                            android:overScrollMode="always"
                            android:padding="8dp"
                            android:scrollbarStyle="insideInset"
                            android:scrollbars="vertical"
                            android:scrollHorizontally="false"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="25dp"
                            android:text="Estimated hour:"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="25dp"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <RadioButton
                                        android:id="@+id/rbminhour"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginTop="5dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/custom_inputfield"
                                        android:paddingRight="10dp"
                                        android:text="1-2 hrs"
                                        android:textColor="@color/black"
                                        android:textSize="17sp"
                                        android:textStyle="bold" />

                                    <RadioButton
                                        android:id="@+id/rbmidhour"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="5dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/custom_inputfield"
                                        android:paddingRight="10dp"
                                        android:text="2-3 hrs"
                                        android:textColor="@color/black"
                                        android:textSize="17sp"
                                        android:textStyle="bold" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <RadioButton
                                        android:id="@+id/rbmaxhour"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/custom_inputfield"
                                        android:paddingRight="10dp"
                                        android:text="3-more"
                                        android:textColor="@color/black"
                                        android:textSize="17sp"
                                        android:textStyle="bold" />

                                    <RadioButton
                                        android:id="@+id/rbotherhour"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginTop="5dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/custom_inputfield"
                                        android:paddingRight="10dp"
                                        android:text="Not Sure"
                                        android:textColor="@color/black"
                                        android:textSize="17sp"
                                        android:textStyle="bold" />

                                </LinearLayout>
                            </RadioGroup>
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="25dp"
                            android:text="Estimated Price:"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/etprice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="25dp"
                            android:background="@drawable/custom_inputfield"
                            android:drawableEnd="@drawable/price"
                            android:inputType="number"
                            android:padding="8dp"
                            android:textColorHint="#000"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="25dp"
                            android:gravity="center"
                            android:visibility="gone"
                            android:textColor="#000000"
                            android:textSize="20sp"/>

                        <Button
                            android:id="@+id/btnPickLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@color/colorAccent"
                            android:drawableStart="@drawable/ic_baseline_location_on_24"
                            android:padding="10dp"
                            android:text="Share Location"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btnsubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:background="@drawable/login_btn"
                            android:drawableEnd="@drawable/next"
                            android:padding="10dp"
                            android:text="Submit"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
